Fixed
Status Update
Comments
sh...@microsoft.com <sh...@microsoft.com>
dx...@google.com <dx...@google.com> #2
Project: chromium/src
Branch: main
Author: Shweta Bindal
Link:
[Editing] Preserve initial selection after listify operation
Expand for full commit details
When inserting a list into a text node where the selection is made by
placing a cursor, the cursor moves to the beginning of the node. To
prevent this behavior, set the selection to the initial position in
InsertListCommand::MoveParagraphOverPositionIntoEmptyListItem.
Updated test cases to correct selection and remove
unnecessary placeholders.
Bug: 395544401
Change-Id: Ib26c9a6e1e35f5bfec206306af97472ee5db84d0
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6225479
Reviewed-by: Kent Tamura <tkent@chromium.org>
Reviewed-by: Sambamurthy Bandaru <sambamurthy.bandaru@microsoft.com>
Commit-Queue: Shweta Bindal <shwetabindal@microsoft.com>
Cr-Commit-Position: refs/heads/main@{#1434648}
Files:
- M
third_party/blink/renderer/core/editing/commands/insert_list_command.cc
- M
third_party/blink/renderer/core/editing/commands/insert_list_command.h
- M
third_party/blink/renderer/core/editing/commands/insert_list_command_test.cc
- M
third_party/blink/renderer/platform/runtime_enabled_features.json5
- A
third_party/blink/web_tests/editing/execCommand/insert_list/insert_list_selection_update.html
Hash: c1fa6e7f0927e92950723995e712ad3eb7757193
Date: Wed Mar 19 08:18:04 2025
Description
1. Open the page with the editable div.
2. Place the cursor between the words in the editable content.
3. Click the Insert Unordered List button.
Expected Behavior:
When you click the button, an unordered list will be inserted at the cursor's position, and the position of cursor will not change.
Current Behavior:
Cursor moves to the start of list.