[Editing] Preserve initial selection after listify operation

When inserting a list into a text node where the selection is made by
placing a cursor, the cursor moves to the beginning of the node. To
prevent this behavior, set the selection to the initial position in
InsertListCommand::MoveParagraphOverPositionIntoEmptyListItem.
Updated test cases to correct selection and remove
unnecessary placeholders.

Bug: 395544401
Change-Id: Ib26c9a6e1e35f5bfec206306af97472ee5db84d0
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6225479
Reviewed-by: Kent Tamura <tkent@chromium.org>
Reviewed-by: Sambamurthy Bandaru <sambamurthy.bandaru@microsoft.com>
Commit-Queue: Shweta Bindal <shwetabindal@microsoft.com>
Cr-Commit-Position: refs/heads/main@{#1434648}